k8s-deployment/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-autoscale-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-autoscale-poc
  template:
    metadata:
      labels:
        app: hpa-autoscale-poc
    spec:
      containers:
      - name: hpa-autoscale-poc
        image: docker.io/jarpsimoes/test-high-scale:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
